Bump Mockito to version 5.16.1